# MicroGreen

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.sh
database/: board_carbon.csv  profiling_results.csv
framework/: Mobisys_battery_plots.py  Mobisys_lifetime_plots.py  Mobisys_solar_plots.py  battery_only.py  constants.py  helper.py  heterogeneousDeployment.py  hybrid.py  main.py  solar_only.py
framework/synthetic_traces/solar_pkl/: synthetic_irradiance_day_0_10000_1s_sinwave.pkl  synthetic_irradiance_day_0_50000_1s_sinwave.pkl  synthetic_irradiance_day_0_5000_1s_sinwave.pkl
framework/synthetic_traces/visitorFlow_pkl/: large_Columbus_Circle.pkl  mid_E_72nd.pkl  small_Central_Park_North.pkl
plotting_scripts/: overall_eval_carbon.py
profiling/: POWER_PROFILING_GUIDE.md
profiling/inference/: CORALMICRO_GUIDELINES.md  INFERENCE_PROFILING_GUIDE.md  RESULTS.md  logs.txt
profiling/inference/idf-sdk/: ESP-IDF_SETUP_GUIDE.md
profiling/inference/idf-sdk/common/tflite_common/: CMakeLists.txt  tflite_inference_runner.cc  tflite_inference_runner.h
profiling/inference/idf-sdk/micro_speech_large/: CMakeLists.txt  esp32s3_micro_speech_large_run1.txt  esp32s3_micro_speech_large_run2.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
profiling/inference/idf-sdk/micro_speech_large/main/: CMakeLists.txt  model_config.h
profiling/inference/idf-sdk/micro_speech_small/: esp32s3_micro_speech_small_run1.txt  sdkconfig.old
profiling/inference/idf-sdk/person_detection/: esp32s3_person_detection_run1.txt  sdkconfig
profiling/inference/idf-sdk/person_detection/main/: CMakeLists.txt  main.cc  person_detect_model_settings.h
profiling/inference/idf-sdk/vww/: CMakeLists.txt  esp32s3_vww_run1.txt  sdkconfig
profiling/inference/idf-sdk/vww/main/: CMakeLists.txt  model_config.h  vww_model_settings.h
profiling/inference/nrf52/: .gitignore  memory_map.txt  nrf52_SETUP_GUIDE.md  nrf52_kws_large_run1.txt  nrf52_kws_small_run1.txt  nrf52_kws_small_run2.txt  nrf52_kws_small_run3.txt  nrf52_person_detection_run1.txt  nrf52_vww_run1.txt  platformio.ini
profiling/inference/nrf52/src/: main.cpp
profiling/inference/nrf52/src/kws_large/: model_config.h
profiling/inference/nrf52/src/kws_small/: model_config.h
profiling/inference/nrf52/src/person_detection/: model_config.h  person_detect_model_data.cc  (+3 more)
profiling/inference/pico-sdk/: CMakeLists.txt  PICO_SETUP_GUIDE.md  Pico person detection  build_picos.sh
profiling/inference/pico-sdk/examples/person_detection/: CMakeLists.txt  model_config.h  person_detect_model_data.cc  person_detect_model_settings.cpp
profiling/inference/pico-sdk/examples/vww/: CMakeLists.txt  model_config.h
profiling/inference/stm32/: README.md  STM32_SETUP_GUIDE.md  link_hardfloat.py  platformio.ini  small_kws_inference
profiling/inference/stm32/src/: main.cpp  main.h
profiling/inference/util/: wav2cpp.py  yes_1000ms_audio_data.cc  yes_1000ms_audio_data.h
profiling/wireless/: WIRELESS_PROFILING_GUIDE.md  ble_connect.py  platformio.ini
profiling/wireless/include/: config.h
profiling/wireless/lib/WirelessTest/: WirelessTest.cpp  WirelessTest.h
profiling/wireless/logs/: nano33ble_DataTransmission_BLE.txt  pico2_DataTransmission_BLE.txt  pico_DataTransmission_BLE.txt  tinypico_DataTransmission_BLE.txt
profiling/wireless/src/: main.cpp
scripts/: board_carbon_csv_generator.py  carbon_component_composition_plotter.py  case_study_plot.py  characterization_fig.py  network_plot.py  overall_eval_energy.py
(+8 files in other folders)
